# dev-profile-transfer

./: README.md  __init__.py  pyproject.toml
tests/: test_capture_state.py  test_restore_profile.py  test_sanitize_sensitive.py  test_validate_env.py
