[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dev-profile-transfer"
version = "0.1.0"
description = "A CLI tool to capture, export, and share developer environment profiles (env vars, aliases, shell config) for portable, offline-first sharing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["python", "click", "pyyaml", "cryptography", "pathlib"]
dependencies = []

[project.urls]
Homepage = "https://github.com/{GITHUB_USERNAME}/dev-profile-transfer"
